chore(dragonfly): disable healthCheckExprs

--- a/kubernetes/apps/database/dragonfly/ks.yaml
+++ b/kubernetes/apps/database/dragonfly/ks.yaml
@@ -38,11 +38,11 @@ spec:
   dependsOn:
     - name: dragonfly
       namespace: *namespace
-  healthCheckExprs:
-    - apiVersion: dragonflydb.io/v1alpha1
-      kind: Dragonfly
-      current: status.phase == 'ready'
-      failed: status.phase != 'ready'
+  # healthCheckExprs:
+  #   - apiVersion: dragonflydb.io/v1alpha1
+  #     kind: Dragonfly
+  #     current: status.phase == 'ready'
+  #     failed: status.phase != 'ready'
   interval: 1h
   path: ./kubernetes/apps/database/dragonfly/cluster
   prune: true
