--- a/kubernetes/apps/database/cloudnative-pg/cluster/gatus.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/gatus.yaml
@@ -17,22 +17,22 @@ data:
         ui:
           hide-url: true
           hide-hostname: true
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: pg17-immich-gatus-ep
-  labels:
-    gatus.io/enabled: "true"
-data:
-  config.yaml: |
-    endpoints:
-      - name: vectordb
-        group: infrastructure
-        url: tcp://pg17-immich-rw.database.svc.cluster.local:5432
-        interval: 1m
-        conditions:
-          - "[CONNECTED] == true"
-        ui:
-          hide-url: true
-          hide-hostname: true
+# ---
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: pg17-immich-gatus-ep
+#   labels:
+#     gatus.io/enabled: "true"
+# data:
+#   config.yaml: |
+#     endpoints:
+#       - name: vectordb
+#         group: infrastructure
+#         url: tcp://pg17-immich-rw.database.svc.cluster.local:5432
+#         interval: 1m
+#         conditions:
+#           - "[CONNECTED] == true"
+#         ui:
+#           hide-url: true
+#           hide-hostname: true
