--- a/kubernetes/apps/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/ks.yaml
@@ -9,6 +9,11 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: *app
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/database/cloudnative-pg/app
   prune: true
@@ -67,13 +72,13 @@ spec:
       namespace: *namespace
     - name: cloudnative-pg-barman-cloud
       namespace: *namespace
-    - name: democratic-csi-iscsi
-      namespace: storage
-  # healthCheckExprs:
-  #   - apiVersion: postgresql.cnpg.io/v1
-  #     kind: Cluster
-  #     current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
-  #     failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
+    - name: openebs
+      namespace: openebs-system
+  healthCheckExprs:
+    - apiVersion: postgresql.cnpg.io/v1
+      kind: Cluster
+      current: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'True')
+      failed: status.conditions.filter(e, e.type == 'Ready').all(e, e.status == 'False')
   interval: 1h
   path: ./kubernetes/apps/database/cloudnative-pg/cluster
   postBuild:
