--- a/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/cluster.yaml
@@ -37,6 +37,59 @@ spec:
     storageClass: openebs-hostpath
   superuserSecret:
     name: cloudnative-pg-secret
+  # bootstrap:
+  #   recovery:
+  #     source: source
+  externalClusters:
+    - name: source
+      plugin:
+        name: barman-cloud.cloudnative-pg.io
+        parameters: *parameters
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/postgresql.cnpg.io/cluster_v1.json
+apiVersion: postgresql.cnpg.io/v1
+kind: Cluster
+metadata:
+  name: pg17-immich
+  annotations:
+    cnpg.io/skipEmptyWalArchiveCheck: enabled
+spec:
+  enableSuperuserAccess: true
+  imageName: ghcr.io/tensorchord/cloudnative-vectorchord:17.5-0.4.3
+  instances: 3
+  monitoring:
+    enablePodMonitor: true
+  plugins:
+    - name: barman-cloud.cloudnative-pg.io
+      isWALArchiver: true
+      parameters: &parameters
+        barmanObjectName: minio
+        serverName: pg17-immich
+  postgresql:
+    parameters:
+      autovacuum_vacuum_scale_factor: "0.1"
+      autovacuum_analyze_scale_factor: "0.05"
+      autovacuum_vacuum_cost_limit: "1000"
+      effective_io_concurrency: "200"
+      max_connections: "300"
+      random_page_cost: "1.2"
+      shared_buffers: 256MB
+      work_mem: 16MB
+    shared_preload_libraries: ["vchord.so"]
+  primaryUpdateMethod: switchover
+  primaryUpdateStrategy: unsupervised
+  resources:
+    requests:
+      cpu: 200m
+      memory: 1Gi
+    limits:
+      hugepages-2Mi: 2Gi # Requires sysctl set on the host.
+      memory: 2Gi
+  storage:
+    size: 10Gi
+    storageClass: openebs-hostpath
+  superuserSecret:
+    name: cloudnative-pg-secret
   # Bootstrap this new cluster by recovering from the old cluster.
   bootstrap:
     recovery:
@@ -47,7 +100,7 @@ spec:
         name: barman-cloud.cloudnative-pg.io
         parameters:
           barmanObjectName: minio
-          serverName: pg17-cluster-v1   # The old cluster serverName in backups.
+          serverName: pg17-immich-v1   # The old cluster serverName in backups.
   # bootstrap:
   #   recovery:
   #     source: source
@@ -56,56 +109,3 @@ spec:
   #     plugin:
   #       name: barman-cloud.cloudnative-pg.io
   #       parameters: *parameters
-# ---
-# # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/postgresql.cnpg.io/cluster_v1.json
-# apiVersion: postgresql.cnpg.io/v1
-# kind: Cluster
-# metadata:
-#   name: pg17-immich
-#   annotations:
-#     cnpg.io/skipEmptyWalArchiveCheck: enabled
-# spec:
-#   enableSuperuserAccess: true
-#   imageName: ghcr.io/tensorchord/cloudnative-vectorchord:17.5-0.4.3
-#   instances: 3
-#   monitoring:
-#     enablePodMonitor: true
-#   plugins:
-#     - name: barman-cloud.cloudnative-pg.io
-#       isWALArchiver: true
-#       parameters: &parameters
-#         barmanObjectName: minio
-#         serverName: pg17-immich-v1
-#   postgresql:
-#     parameters:
-#       autovacuum_vacuum_scale_factor: "0.1"
-#       autovacuum_analyze_scale_factor: "0.05"
-#       autovacuum_vacuum_cost_limit: "1000"
-#       effective_io_concurrency: "200"
-#       max_connections: "300"
-#       random_page_cost: "1.2"
-#       shared_buffers: 256MB
-#       work_mem: 16MB
-#     shared_preload_libraries: ["vchord.so"]
-#   primaryUpdateMethod: switchover
-#   primaryUpdateStrategy: unsupervised
-#   resources:
-#     requests:
-#       cpu: 200m
-#       memory: 1Gi
-#     limits:
-#       hugepages-2Mi: 2Gi # Requires sysctl set on the host.
-#       memory: 2Gi
-#   storage:
-#     size: 10Gi
-#     storageClass: openebs-hostpath
-#   superuserSecret:
-#     name: cloudnative-pg-secret
-#   # bootstrap:
-#   #   recovery:
-#   #     source: source
-#   externalClusters:
-#     - name: source
-#       plugin:
-#         name: barman-cloud.cloudnative-pg.io
-#         parameters: *parameters
