--- a/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/service.yaml
@@ -16,21 +16,21 @@ spec:
   selector:
     cnpg.io/cluster: *dbcluster
     cnpg.io/instanceRole: primary
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: &dbcluster pg17-immich
-#   annotations:
-#     external-dns.alpha.kubernetes.io/hostname: vectordb.${SECRET_DOMAIN}
-#     lbipam.cilium.io/ips: 192.168.20.51
-# spec:
-#   type: LoadBalancer
-#   ports:
-#     - name: postgres
-#       port: &port 5432
-#       protocol: TCP
-#       targetPort: *port
-#   selector:
-#     cnpg.io/cluster: *dbcluster
-#     cnpg.io/instanceRole: primary
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: &dbcluster pg17-immich
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: vectordb.${SECRET_DOMAIN}
+    lbipam.cilium.io/ips: 192.168.20.51
+spec:
+  type: LoadBalancer
+  ports:
+    - name: postgres
+      port: &port 5432
+      protocol: TCP
+      targetPort: *port
+  selector:
+    cnpg.io/cluster: *dbcluster
+    cnpg.io/instanceRole: primary
