--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   # - ./jellyseerr/ks.yaml
   # - ./lidarr/ks.yaml
   - ./navidrome/ks.yaml
-  # - ./prowlarr/ks.yaml
+  - ./prowlarr/ks.yaml
   # - ./radarr/ks.yaml
   # - ./recyclarr/ks.yaml
   # - ./sonarr/ks.yaml
