--- a/kubernetes/apps/media/sonarr/ks.yaml
+++ b/kubernetes/apps/media/sonarr/ks.yaml
@@ -14,7 +14,7 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
-    - name: democratic-csi-nfs
+    - name: democratic-csi-iscsi
       namespace: storage
     - name: volsync
       namespace: volsync-system
@@ -27,7 +27,7 @@ spec:
       APP_GID: *uid
       VOLSYNC_CLAIM: *app
       VOLSYNC_ACCESSMODES: &accessModes ReadWriteOnce
-      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_NFS}
+      VOLSYNC_STORAGECLASS: &storageClass ${CLUSTER_STORAGE_BLOCK}
       VOLSYNC_SNAPSHOTCLASS: *storageClass
       VOLSYNC_CACHE_ACCESSMODES: *accessModes
       VOLSYNC_CAPACITY: &capacity 2Gi
