--- a/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/immich/app/helmrelease.yaml
@@ -133,7 +133,7 @@ spec:
       priorityClassName: gpu-priority
       runtimeClassName: nvidia
       securityContext:
-        runAsNonRoot: true
+        # runAsNonRoot: true
         runAsUser: &uid 5000
         runAsGroup: &gid 3010
         fsGroup: *gid
