--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -305,32 +305,32 @@ spec:
             - { name: DS_PROMETHEUS, value: Prometheus }
       unifi:
         unifi-client-dpi:
-          # renovate: depName="UniFi Client DPI: Prometheus Dashboard"
+          # renovate: depName="UniFi-Poller: Client DPI - Prometheus"
           gnetId: 11310
           revision: 5
           datasource: Prometheus
         unifi-sites:
-          # renovate: depName="UniFi Sites: Prometheus Dashboard"
+          # renovate: depName="UniFi-Poller: Network Sites - Prometheus"
           gnetId: 11311
           revision: 5
           datasource: Prometheus
         unifi-usw:
-          # renovate: depName="UniFi USW: Prometheus Dashboard"
+          # renovate: depName="UniFi-Poller: USW Insights - Prometheus"
           gnetId: 11312
           revision: 9
           datasource: Prometheus
         unifi-usg:
-          # renovate: depName="UniFi USG: Prometheus Dashboard"
+          # renovate: depName="UniFi-Poller: USG Insights - Prometheus"
           gnetId: 11313
           revision: 9
           datasource: Prometheus
         unifi-uap:
-          # renovate: depName="UniFi UAP: Prometheus Dashboard"
+          # renovate: depName="UniFi-Poller: UAP Insights - Prometheus"
           gnetId: 11314
           revision: 10
           datasource: Prometheus
         unifi-clients:
-          # renovate: depName="UniFi Clients: Prometheus Dashboard"
+          # renovate: depName="UniFi-Poller: Client Insights - Prometheus"
           gnetId: 11315
           revision: 9
           datasource: Prometheus
