--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -7,7 +7,7 @@ tasks:
   apply-node:
     desc: Apply Talos config to a node [NODE=required] [MODE={{.MODE}}]
     cmd: |
-      minijinja-cli {{.TALOS_DIR}}/{{.NODE}}.yaml.j2 \
+      minijinja-cli {{.TALOS_DIR}}/nodes/{{.NODE}}.yaml.j2 \
         | op inject \
         | talosctl --nodes {{.NODE}} apply-config \
           --mode={{.MODE}} \
@@ -21,7 +21,7 @@ tasks:
     preconditions:
       - op user get --me
       - talosctl config info
-      - test -f {{.TALOS_DIR}}/{{.NODE}}.yaml.j2
+      - test -f {{.TALOS_DIR}}/nodes/{{.NODE}}.yaml.j2
       - test -f {{.TALOS_DIR}}/schematic.yaml.j2
       - which minijinja-cli op talosctl
 
