chore: remove nfs path secrets

--- a/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
@@ -89,6 +89,6 @@ spec:
       downloads:
         type: nfs
         server: nas.${SECRET_DOMAIN}
-        path: ${SECRET_NFS_PATH_MEDIA}
+        path: /mnt/hdd-media/Media
         globalMounts:
           - path: /downloads
