--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -100,7 +100,7 @@ spec:
       media:
         type: nfs
         server: nas.${SECRET_DOMAIN}
-        path: ${SECRET_NFS_PATH_MEDIA}
+        path: /mnt/hdd-media/Media
         globalMounts:
           - path: /data
       tmp:
