--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/plan.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/plan.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
   version: v1.34.1
+  concurrency: 1
   exclusive: true
   serviceAccountName: system-upgrade-controller
   secrets:
@@ -33,7 +34,6 @@ spec:
   # renovate: datasource=docker depName=ghcr.io/siderolabs/installer
   version: v1.11.1
   concurrency: 1
-  postCompleteDelay: 2m
   exclusive: true
   serviceAccountName: system-upgrade-controller
   secrets:
@@ -42,8 +42,9 @@ spec:
       ignoreUpdates: true
   nodeSelector:
     matchExpressions:
-      - key: kubernetes.io/hostname
-        operator: Exists
+      - key: kubernetes.io/os
+        operator: In
+        values: ["linux"]
   upgrade:
     image: ghcr.io/jfroy/tnu:0.4.3
     args:
