--- a/bootstrap/helmfile.d/01-apps.yaml
+++ b/bootstrap/helmfile.d/01-apps.yaml
@@ -14,17 +14,25 @@ releases:
     values:
       - ./templates/values.yaml.gotmpl
     hooks:
-      - # Advertise Kube API VIP
+      - # Wait for Cilium CRDs to be available.
+        command: bash
+        args:
+          - -c
+          - until kubectl get crd ciliumloadbalancerippools.cilium.io ciliuml2announcementpolicies.cilium.io ciliumbgpadvertisements.cilium.io ciliumbgppeerconfigs.cilium.io ciliumbgpclusterconfigs.cilium.io &>/dev/null; do sleep 5; done
         events:
-          - 'postsync'
+          - postsync
+        showlogs: true
+      - # Apply Cilium network configuration.
         command: kubectl
         args:
           - apply
-          - --server-side
           - --namespace=kube-system
+          - --server-side
           - --field-manager=kustomize-controller
           - --kustomize
           - ../../kubernetes/apps/kube-system/cilium/config
+        events:
+          - 'postsync'
         showlogs: true
 
   - name: coredns
