--- a/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/app/helmrelease.yaml
@@ -24,7 +24,9 @@ spec:
           prober: http
           timeout: 5s
           http:
-            valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
+            valid_http_versions:
+              - HTTP/1.1
+              - HTTP/2.0
             follow_redirects: true
             preferred_ip_protocol: ip4
         icmp:
@@ -59,7 +61,8 @@ spec:
       readOnlyRootFilesystem: true
       capabilities:
         # Add NET_RAW to enable ICMP.
-        add: ["NET_RAW"]
+        add:
+         - NET_RAW
     serviceMonitor:
       enabled: true
       defaults:
@@ -76,12 +79,12 @@ spec:
           name: nas-icmp
           url: nas.${SECRET_DOMAIN}
         # PiKVM
-        # - module: http_2xx
-        #   name: pikvm-http
-        #   url: "https://pikvm.${SECRET_DOMAIN}"
-        # - module: icmp
-        #   name: pikvm-icmp
-        #   url: pikvm.${SECRET_DOMAIN}
+        - module: http_2xx
+          name: pikvm-http
+          url: "https://pikvm.${SECRET_DOMAIN}"
+        - module: icmp
+          name: pikvm-icmp
+          url: pikvm.${SECRET_DOMAIN}
         # Proxmox VE host
         - module: http_2xx
           name: pve-http
