--- a/kubernetes/apps/observability/headlamp/app/rbac.yaml
+++ b/kubernetes/apps/observability/headlamp/app/rbac.yaml
@@ -1,20 +1,20 @@
 ---
 apiVersion: v1
 kind: ServiceAccount
+automountServiceAccountToken: true
 metadata:
   name: headlamp-admin
   namespace: observability
-automountServiceAccountToken: true
 ---
 # Create authentication token:
 # kubectl create token headlamp-admin -n observability
 apiVersion: v1
 kind: Secret
 metadata:
-  name: &name headlamp-admin
-  namespace: observability
   annotations:
-    kubernetes.io/service-account.name: *name
+    kubernetes.io/service-account.name: &name headlamp-admin
+  name: *name
+  namespace: observability
 type: kubernetes.io/service-account-token
 ---
 apiVersion: rbac.authorization.k8s.io/v1
