--- a/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
@@ -59,24 +59,6 @@ spec:
         runAsGroup: &gid 4000
         fsGroup: *gid
         fsGroupChangePolicy: OnRootMismatch
-    service:
-      app:
-        ports:
-          http:
-            port: *port
-    ingress:
-      app:
-        className: internal
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
-        tls:
-          - hosts:
-              - *host
     persistence:
       config:
         existingClaim: "{{ .Release.Name }}"
@@ -92,3 +74,16 @@ spec:
         path: /mnt/hdd-media/Media
         globalMounts:
           - path: /downloads
+    route:
+      app:
+        hostnames:
+          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+        parentRefs:
+          - name: envoy-internal
+            namespace: network
+            sectionName: https
+    service:
+      app:
+        ports:
+          http:
+            port: *port
