--- a/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/atuin/app/helmrelease.yaml
@@ -43,7 +43,10 @@ spec:
               ATUIN_METRICS__HOST: 0.0.0.0
               ATUIN_METRICS__PORT: &metricsPort 8081
             envFrom: *envFrom
-            command: ["atuin", "server", "start"]
+            command:
+              - atuin
+              - server
+              - start
             probes:
               liveness: &probes
                 enabled: true
@@ -74,6 +77,22 @@ spec:
         runAsGroup: *uid
         fsGroup: *uid
         fsGroupChangePolicy: OnRootMismatch
+    persistence:
+      config:
+        type: emptyDir
+    route:
+      app:
+        hostnames:
+          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - "sh.${SECRET_DOMAIN}"
+        parentRefs:
+          - name: envoy-internal
+            namespace: network
+            sectionName: https
+        rules:
+          - backendRefs:
+              - identifier: app
+                port: *port
     service:
       app:
         ports:
@@ -89,22 +108,3 @@ spec:
             path: /metrics
             interval: 1m
             scrapeTimeout: 10s
-    ingress:
-      app:
-        className: internal
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths: &paths
-              - path: /
-                service:
-                  identifier: app
-                  port: http
-          - host: &customHost sh.${SECRET_DOMAIN}
-            paths: *paths
-        tls:
-          - hosts:
-              - *host
-              - *customHost
-    persistence:
-      config:
-        type: emptyDir
