--- a/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
@@ -48,24 +48,6 @@ spec:
         runAsNonRoot: true
         runAsUser: &uid 65534
         runAsGroup: *uid
-    service:
-      app:
-        ports:
-          http:
-            port: 80
-    ingress:
-      app:
-        className: internal
-        hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                service:
-                  identifier: app
-                  port: http
-        tls:
-          - hosts:
-              - *host
     persistence:
       cache:
         type: emptyDir
@@ -80,3 +62,16 @@ spec:
         globalMounts:
           - path: /var/run
             subPath: nginx.pid
+    route:
+      app:
+        hostnames:
+          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+        parentRefs:
+          - name: envoy-internal
+            namespace: network
+            sectionName: https
+    service:
+      app:
+        ports:
+          http:
+            port: 80
