chore(taskfile): replace ingress with httproutes

--- a/.taskfiles/kubernetes/Taskfile.yaml
+++ b/.taskfiles/kubernetes/Taskfile.yaml
@@ -59,7 +59,7 @@ tasks:
         helmreleases
         certificates
         certificaterequests
-        ingresses
+        httproutes
         pods
     preconditions:
       - which kubectl
