--- a/kubernetes/apps/observability/headlamp/app/httproute.yaml
+++ b/kubernetes/apps/observability/headlamp/app/httproute.yaml
@@ -3,7 +3,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: blackbox-exporter
+  name: headlamp
 spec:
   hostnames:
     - "headlamp.${SECRET_DOMAIN}"
