--- a/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
         kustomize:
         patches:
           # Add SOPS decryption to 'flux-system' Kustomizations.
-          - patch: |
+          - patch: |-
               - op: add
                 path: /spec/decryption
                 value:
@@ -56,7 +56,7 @@ spec:
               kind: Kustomization
           # Increase the number of workers and limits.
           # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#increase-the-number-of-workers-and-limits
-          - patch: |
+          - patch: |-
               - op: add
                 path: /spec/template/spec/containers/0/args/-
                 value: --concurrent=10
@@ -67,7 +67,7 @@ spec:
               kind: Deployment
               name: (kustomize-controller|helm-controller|source-controller)
           # Increase the memory limits.
-          - patch: |
+          - patch: |-
               apiVersion: apps/v1
               kind: Deployment
               metadata:
@@ -85,7 +85,7 @@ spec:
               name: (kustomize-controller|helm-controller|source-controller)
           # Enable in-memory kustomize builds.
           # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-in-memory-kustomize-builds
-          - patch: |
+          - patch: |-
               - op: add
                 path: /spec/template/spec/containers/0/args/-
                 value: --concurrent=20
@@ -100,7 +100,7 @@ spec:
               name: kustomize-controller
           # Enable Helm repositories caching.
           # Ref: https://fluxcd.io/flux/installation/configuration/vertical-scaling/#enable-helm-repositories-caching
-          - patch: |
+          - patch: |-
               - op: add
                 path: /spec/template/spec/containers/0/args/-
                 value: --helm-cache-max-size=10
@@ -115,7 +115,7 @@ spec:
               name: source-controller
           # Flux near OOM detection for Helm.
           # Ref: https://fluxcd.io/flux/installation/configuration/helm-oom-detection/
-          - patch: |
+          - patch: |-
               - op: add
                 path: /spec/template/spec/containers/0/args/-
                 value: --feature-gates=OOMWatch=true
@@ -129,7 +129,7 @@ spec:
               kind: Deployment
               name: helm-controller
           - # Disable chart digest tracking.
-            patch: |
+            patch: |-
               - op: add
                 path: /spec/template/spec/containers/0/args/-
                 value: --feature-gates=DisableChartDigestTracking=true
