--- a/kubernetes/apps/network/cloudflared/app/dnsendpoint.yaml
+++ b/kubernetes/apps/network/cloudflared/app/dnsendpoint.yaml
@@ -6,6 +6,7 @@ metadata:
   name: cloudflared
 spec:
   endpoints:
-    - dnsName: "external.${SECRET_DOMAIN}"
+    - dnsName: external.${SECRET_DOMAIN}
       recordType: CNAME
-      targets: ["${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+      targets:
+        - ${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com
