--- a/kubernetes/apps/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/app/helmrelease.yaml
@@ -41,7 +41,11 @@ spec:
             envFrom:
               - secretRef:
                   name: "{{ .Release.Name }}-secret"
-            args: ["server", "/data", "--console-address", ":9001"]
+            args:
+              - server
+              - /data
+              - --console-address
+              - :9001
             probes:
               liveness: &probes
                 enabled: true
